# defi-challenge

./: LICENSE  README.md
client/: package-lock.json
contracts/: README.md
contracts/.algokit/: .copier-answers.yml
contracts/smart_contracts/artifacts/atom_trade/: AtomTrade.approval.puya.map  AtomTrade.approval.teal  AtomTrade.arc32.json  AtomTrade.clear.puya.map  AtomTrade.clear.teal  atom_trade_client.py
contracts/smart_contracts/atom_trade/: contract.py  deploy_config.py
limit_order/: .algokit.toml  README.md  limit_order.code-workspace
limit_order/.algokit/: .copier-answers.yml
limit_order/projects/limit_order-contracts/: .algokit.toml  README.md  pyproject.toml
limit_order/projects/limit_order-contracts/.algokit/: .copier-answers.yml
limit_order/projects/limit_order-contracts/smart_contracts/artifacts/limit_order/: LimitOrder.approval.puya.map  LimitOrder.approval.teal  LimitOrder.arc32.json  LimitOrder.clear.puya.map  LimitOrder.clear.teal  limit_order_client.py
limit_order/projects/limit_order-contracts/smart_contracts/limit_order/: contract.py  deploy_config.py
limit_order/projects/limit_order-frontend/: .algokit.toml  README.md  package-lock.json  package.json
limit_order/projects/limit_order-frontend/.algokit/: .copier-answers.yml
limit_order/projects/limit_order-frontend/src/components/: AppCalls.tsx
server/: .env  pyproject.toml
server/server/: main.py
server/server/configs/: algorand.py
server/server/services/: price.py
server/server/utils/: constants.py
