[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Simon Samuel <salviensky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.115.5" }
tinyman-py-sdk = {git = "https://github.com/tinymanorg/tinyman-py-sdk.git"}
py-algorand-sdk = "^2.6.1"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
start = "server.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
